[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
memflow = "0.2"
common = { path = "../common" }
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ini = "1.3"
lazy_static = "1.4"
